[package]
name = "cut_creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui = { version = "0.23.0", features = ["serde"] }
egui_extras = "0.23.0"
egui_plot = "0.23.0"
env_logger = "0.10.0"
hound = "3.5.1"
image = "0.24.7"
log = "0.4.20"
rfd = "0.12.0"
serde = "1.0.189"
serde_json = "1.0.107"
splines = { version = "4.3.0", features = ["serde"] }
wav = "1.0.0"

[profile.dev]
overflow-checks = false

[patch.crates-io]
splines = { path = "../splines" }
