[package]
name = "cut_creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
egui = { version = "0.28.1", features = ["serde"] }
egui_extras = "0.28.1"
egui_plot = "0.28.1"
env_logger = "0.11.5"
hound = "3.5.1"
image = "0.25.2"
log = "0.4.22"
rfd = "0.14.1"
rubato = "0.15.0"
serde = "1.0.209"
serde_json = "1.0.127"
splines = { version = "4.3.1" }

[profile.dev]
overflow-checks = false
